fix navbar on mobile

--- a/style/style.scss
+++ b/style/style.scss
@@ -18,7 +18,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 8rem;
+    min-height: 8rem;
     padding: 0 20rem;
     background: #FFFFFF;
     position: fixed;
@@ -52,6 +52,7 @@ header {
             font-size: 1.6rem;
             font-weight: 400;
             color: #828FA3;
+            white-space: nowrap;
 
             i {
                 margin-right: .5rem;
@@ -440,6 +441,10 @@ footer {
     .header {
         flex-direction: column;
         justify-content: center;
+
+        ul {
+            padding-bottom: 1rem;
+        }
 
         a {
             margin-bottom: .2rem;
